ks8/manifests/infrastructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ks8-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: catalog-spring-ms-app.local
      http:
        paths:
          - path: "/api/v1(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 9000
          - path: "/grafana(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: "/keycloak"
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 80
